# carcara

./: QF_UFLIA_BENCHMARK.json  bench.sh  benchmark.sh  carcara.code-workspace  default.rare  elaboration.html  elaboration_report.json  eqTrans.smt2.alethe  eqTrans2.smt2.alethe  example2.alethe  explosion.alethe  github  github.pub  out.txt  polyeq-elaboration.html  prob_00664_026923__18021734-t379.smt2  prob_00664_026923__18021734-t569.t3.t0.alethe  proof.smt2  proof.smt2.alethe  prop.rare  rules.rare  rules2 copy.rare  rules2.rare  smtlib.606691.smt2.alethe  test.1  test.rare  test.smt2  test.smt2 copy.aleth  test.smt2.alethe  test1.explicit.smt2.alethe  test1.smt2.alethe  test1.txt  test2.smt2.alethe
carcara/: Cargo.toml  carcara.code-workspace
carcara/src/: drup.rs  lib.rs  rare.rs
carcara/src/ast/: macros.rs  mod.rs  polyeq.rs  printer.rs  rare_rules.rs  rules.rs  substitution.rs  term.rs
carcara/src/ast/pool/: mod.rs
carcara/src/checker/: error.rs  mod.rs  shared.rs
carcara/src/checker/parallel/: mod.rs
carcara/src/checker/rules/: drup.rs  mod.rs  rare.rs
carcara/src/elaborator/: drup.rs  hole.rs  lia_generic.rs  mod.rs  rare.rs  uncrowding.rs
carcara/src/parser/: error.rs  lexer.rs  mod.rs
carcara/src/parser/rare/: mod.rs
carcara/src/rare/: computational.rs  default.rs  engine.rs  language.rs  meta.rs  mod.rs  util.rs
carcara/src/rare/computational/: aci_norm.rs  arith_poly_norm.egglog  arith_poly_norm.rs  arith_poly_norm_tests.egglog  core.rs  defunctionalization.rs  distinct_elim.rs  evaluation.egglog  (+4 more)
carcara/tests/: test_example_files.rs
(+40 files in other folders)
